--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,20 @@ p{
 }
 
 @media (max-width: 670px) {
+    *{
+        background-size: cover;
+    }
     h1 {
         margin-top: 50px;
         margin-bottom: 50px;
         font-size: 40px;
+        color:rgb(1, 1, 32);
     }
     
     h2 ,p{
         font-size: 25px;
         margin-top: 50px;
+        color:rgb(1, 1, 32);
     }
 
     p{
